--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,4 +8,4 @@ kramdown:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
